re-changed .toList() with .collect(Collectors.toList())